# BACKEND_TASK_MANAGER_CHALLENGE

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: routes.py
app/api/endpoints/: auth.py  tasks.py  users.py
app/core/: config.py  deps.py  security.py
app/database/: __init__.py  init_db.py  mongodb.py
app/models/: __init__.py  task.py  token.py  user.py
app/repositories/: __init__.py  task_repository.py  user_repository.py
nginx/: Dockerfile  nginx.conf
scripts/: mongo-init.js
tests/: __init__.py  conftest.py  test_auth.py  test_database.py  test_main.py  test_startup.py  test_tasks.py  test_users.py
